# common_backend

./: .gitmodules  CMakeLists.txt  compile_external.sh
src/: CMakeLists.txt  database_connection.h  database_transaction.h  kafka_consumer.cpp  kafka_consumer.h  kafka_producer.cpp  kafka_producer.h  repository.cpp  repository.h
src/repositories/: user_repository.cpp  user_repository.h
test/: CMakeLists.txt
